# bl-view-mcp

./: ._data  .dockerignore  .gitignore  CLAUDE.md  CONTRIBUTING.md  Dockerfile  ISSUE_RELATIVE_VIEWS.md  ISSUE_RELATIVE_VIEWS_SHORT.md  LICENSE  Makefile  QUICKSTART.md  README.md  TESTING.md  WINDSURF_SETUP.md  cleanup_reference.sh  pyproject.toml  smithery.yaml  start_http.py  start_stdio.py
.github/workflows/: publish.yml  test.yml  update-crypto.yml  update-etf.yml  update-nasdaq100.yml  update-snp500.yml
bl_agent/: __init__.py  agent.py  prompt.py
bl_mcp/: __main__.py  server.py  tools.py
bl_mcp/utils/: data_loader.py  risk_models.py  session.py  validators.py
docs/: ARCHITECTURE.md  CONFIDENCE_SCALE.md  IDZOREK_VERIFICATION.md  RELATIVE_VIEWS_IMPLEMENTATION.md  TESTING.md  WINDSURF_SETUP.md
examples/dashboards/: demo_correlation.html  demo_sensitivity.html  demo_strategy.html  tool1.html  tool2.html  tool3.html  tool4.html  tool5.html
memory-bank/: activeContext.md  productContext.md  progress.md  progress_phase1.md  projectbrief.md  systemPatterns.md  techContext.md
reference/: README.md
reference/9_AGENT_PROTOCOL/: .flake8  .gitignore  env.py  pyproject.toml  start_image_mcp.py
reference/9_AGENT_PROTOCOL/image_editor_agent_with_mcp/: agent.py  prompt.py
reference/9_AGENT_PROTOCOL/image_mcp/: server.py  tools.py
scripts/: capture_screenshots.py  common.py  download_crypto.py  download_data.py  download_etf.py  download_nasdaq100.py  download_sp500.py
tests/: ADK_WEB_GUIDE.md  README.md  test_agent.py  test_backtest.py  test_confidence_types.py  test_idzorek_implementation.py  test_relative_views.py  test_relative_views_simple.py  test_simple.py  test_tool_confidence.py  test_var_validation.py  test_var_warning_output.py  test_views_format.py
