[project]
name = "black-litterman-mcp"
version = "0.1.0"
description = "Black-Litterman Portfolio Optimization MCP Server"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "Black-Litterman MCP Team"}
]
dependencies = [
    "fastmcp==2.13.0.1",
    "PyPortfolioOpt>=1.5.5",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "yfinance>=0.2.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
agent = [
    "google-adk[a2a]==1.14.1",
    "google-genai>=1.38.0",
]
dev = [
    "pytest>=7.4.0",
    "mypy>=1.5.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["bl_mcp"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]  # line too long (handled by formatter)

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
