[project]
name = "black-litterman-mcp"
version = "0.1.5"
description = "Black-Litterman Portfolio Optimization MCP Server"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "irresi", email = "irresi@users.noreply.github.com"}
]
keywords = ["mcp", "black-litterman", "portfolio", "optimization", "finance", "ai", "claude"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "fastmcp==2.13.0.1",
    "PyPortfolioOpt>=1.5.5",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "yfinance>=0.2.0",
    "python-dotenv>=1.0.0",
    "pyarrow>=18.0.0",
    "scikit-learn>=1.3.0",
    "lxml>=5.0.0",
    "html5lib>=1.1",
    "requests>=2.31.0",
]

[project.scripts]
bl-view-mcp = "bl_mcp.__main__:main_stdio"
bl-view-mcp-http = "bl_mcp.__main__:main_http"

[project.urls]
Homepage = "https://github.com/irresi/bl-view-mcp"
Repository = "https://github.com/irresi/bl-view-mcp"
Issues = "https://github.com/irresi/bl-view-mcp/issues"
Documentation = "https://github.com/irresi/bl-view-mcp#readme"

[project.optional-dependencies]
agent = [
    "google-adk[a2a]==1.14.1",
    "google-genai>=1.38.0",
]
crypto = [
    "ccxt>=4.0.0",
]
dev = [
    "pytest>=7.4.0",
    "mypy>=1.5.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["bl_mcp"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]  # line too long (handled by formatter)

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
